@@ -465,6 +465,7 @@ BA   59- V=galoisfixedfield(,,2): return V[1] in the same variable as the
      63- The functions psdraw, psploth and psplothraw and the default psfile
          are obsolete. Use one of plotexport, plothexport or plothrawexport
          with format "ps" and write the result to file.
+AP   64- new implementation of matsolvemod
 
   Removed
       1- file 'MACHINES' (no longer maintained)
